--- a/Springboot-gradle-mysql-springdatajpa-hibernate/build.gradle
+++ b/Springboot-gradle-mysql-springdatajpa-hibernate/build.gradle
@@ -16,6 +16,11 @@ apply plugin: 'idea'
 apply plugin: 'spring-boot' 
 
 
+jar {
+    baseName = 'ensemble'
+    version = '0.0.1-SNAPSHOT'
+}
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -25,14 +30,20 @@ repositories {
 
 
 dependencies {
-	compile 'org.springframework.boot:spring-boot-starter-web'    	
+	compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.boot:spring-boot-starter-tomcat'	
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-web')
     runtime('mysql:mysql-connector-java')
     testCompile('org.springframework.boot:spring-boot-starter-test') 
 }
 
-
+eclipse {
+    classpath {
+         containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
+         containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
+    }
+}
 
 
 task wrapper(type: Wrapper) {
